--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #5e42a6;
+  margin: 0;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
+  color: #f2f2f2;
+  font-size: 18px;
+}
+
+body,
+html {
+  height: 100%;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  line-height: 1;
+  font-size: 1em;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+nav {
+  background-color: #312450;
+  width: 260px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+main {
+  flex-grow: 1;
+}
+
+.nav-links {
+  margin-top: 40px;
+}
+
+.nav-links li {
+  position: relative;
+}
+
+.nav-links li:hover:after {
+  width: 100%;
+}
+
+.nav-links li:after {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: rgb(94, 66, 166);
+  background: radial-gradient(
+    circle,
+    rgba(94, 66, 166, 1) 0%,
+    rgba(49, 36, 80, 1) 100%
+  );
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  bottom: 0;
+  transition: width 0.2s ease;
+  -webkit-transition: width 0.2s ease;
+}
+
+a {
+  text-decoration: none;
+}
+
+.nav-links .nav-button {
+  color: #f2f2f2;
+  opacity: 0.4;
+  background: transparent;
+  border: none;
+  display: block;
+  width: 100%;
+  cursor: pointer;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 10px;
+  line-height: 1;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-header {
+  text-align: center;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: #5e42a6;
+  font-weight: 100;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.stats {
+  text-transform: uppercase;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.stats li {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  border-bottom: 2px solid #5e42a6;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.stats .stats-header {
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.stats .stats-value {
+  font-size: 0.9em;
 }
