--- a/src/App.css
+++ b/src/App.css
@@ -45,8 +45,50 @@ nav {
   justify-content: space-between;
 }
 
+.btn--menu {
+  display: none;
+}
+
+@media screen and (max-width: 960px) {
+  nav {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    transform: translateX(-100%);
+    transition: transform 0.2s ease;
+    -webkit-transform: translateX(-100%);
+    -webkit-transition: transform 0.2s ease;
+  }
+  nav.open {
+    transform: translateX(0);
+    -webkit-transform: translateX(0);
+    z-index: 5;
+  }
+  .btn--menu {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 10;
+  }
+}
+
 main {
   flex-grow: 1;
+}
+
+button {
+  background: none;
+  border: none;
+  font-family: inherit;
+  color: #f2f2f2;
+  text-transform: uppercase;
+  font-size: 1em;
+  padding: 10px;
+  cursor: pointer;
+  padding: 10px;
+  line-height: 1;
+  text-align: center;
 }
 
 .nav-links {
@@ -86,19 +128,11 @@ a {
 }
 
 .nav-links .nav-button {
-  color: #f2f2f2;
-  opacity: 0.4;
-  background: transparent;
-  border: none;
+  opacity: 0.7;
   display: block;
   width: 100%;
-  cursor: pointer;
   font-size: 1.5em;
-  text-transform: uppercase;
   font-weight: 700;
-  padding: 10px;
-  line-height: 1;
-  text-align: center;
 }
 
 .app-header {
@@ -111,6 +145,7 @@ a {
 
 .stats {
   text-transform: uppercase;
+  padding: 20px;
 }
 
 .stats li {
