Created AppContext that stores the program data for app. Crated simple instructions component to show when program data is empty

--- a/src/scss/forms.scss
+++ b/src/scss/forms.scss
@@ -103,8 +103,7 @@ input {
 }
 
 .start-form {
-  max-width: 600px;
-  width: 100%;
+  @include medium-width-element;
   h1 {
     margin-bottom: $app-unit;
     border-bottom: 1px solid $white;
