--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,13 @@
+@import "scss/mixins.scss";
 @import "scss/variables.scss";
+@import "scss/utils.scss";
 @import "scss/layout.scss";
 @import "scss/forms.scss";
 @import "scss/nav.scss";
-@import "scss/stats.scss";
 @import "scss/typography.scss";
 @import "scss/button.scss";
+@import "scss/stats.scss";
+@import "scss/instructions.scss";
 
 * {
   box-sizing: border-box;
@@ -39,14 +42,14 @@ ul {
   list-style: none;
 }
 
+a {
+  color: inherit;
+}
+
 main {
   flex-grow: 1;
   padding: $app-unit * 2 $app-unit $app-unit $app-unit;
   @media screen and (max-width: 960px) {
     padding: $app-unit * 4 $app-unit $app-unit $app-unit;
   }
-}
-
-a {
-  text-decoration: none;
 }
