--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -15,3 +15,11 @@ h1 {
 h2 {
   font-size: $font-size-md;
 }
+
+.text-large {
+  font-size: $font-size-lg;
+}
+
+.text-bold {
+  font-weight: 700;
+}
