added localizations to views and components. Created circle graph for overall progress. Created simple view for frontpage

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 @import "scss/button.scss";
 @import "scss/stats.scss";
 @import "scss/instructions.scss";
+@import "scss/program.scss";
 
 * {
   box-sizing: border-box;
@@ -18,7 +19,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: $base-font-family, sans-serif;
-  color: $white;
+  color: $main-font-color;
   font-size: $base-font-size;
 }
 
