--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -2,7 +2,7 @@
   background: none;
   border: none;
   font-family: inherit;
-  color: $white;
+  color: $main-font-color;
   text-transform: uppercase;
   font-size: $font-size-default;
   padding: $app-unit / 2;
