--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,10 +1,11 @@
 // Colors
 $purple-dark: #443073;
 $purple-light: #5e42a6;
-$white: #dedede;
-$black: #333333;
-$red: #db5876;
+$white: #d1d1d1;
+$black: #363636;
+$red: #a3376c;
 $green: #50a667;
+$orange: #ad5b37;
 
 // Typo
 $base-font-size: 18px;
@@ -18,3 +19,5 @@ $base-font-family: "Montserrat";
 $app-unit: 20px;
 $app-bg: $purple-light;
 $app-nav-bg: $purple-dark;
+$main-font-color: $white;
+$nav-font-color: $white;
