--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,16 +1,20 @@
 nav {
   position: relative;
   background-color: $app-nav-bg;
-  width: 260px;
+  min-width: 260px;
   padding: $app-unit;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  color: $nav-font-color;
   .toggle-menu {
     display: none;
     position: absolute;
     top: 0;
     right: -100px;
+  }
+  .btn {
+    color: $nav-font-color;
   }
   @media screen and (max-width: 960px) {
     position: fixed;
@@ -45,36 +49,31 @@ nav {
     font-size: $font-size-md;
     transition: font-size 0.2s ease;
     text-decoration: none;
+    position: relative;
+    overflow: hidden;
+    .fas {
+      font-size: 0.5em;
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      opacity: 0;
+      transform: translateY(-50%) translateX(100%);
+      -webkit-transform: translateY(-50%) translateX(100%);
+      transition: transform 0.2s ease, opacity 0.2s ease;
+      -webkit-transition: transform 0.2s ease, opacity 0.2s ease;
+      will-change: transform;
+    }
     &.current {
       font-weight: 700;
-      font-size: $font-size-lg;
+      .fas {
+        font-size: 0.5em;
+        transform: translateY(-50%) translateX(0);
+        -webkit-transform: translateY(-50%) translateX(0);
+        opacity: 1;
+      }
     }
   }
   li {
     position: relative;
-    &:after {
-      content: "";
-      width: 0%;
-      height: 2px;
-      background: rgb(94, 66, 166);
-      background: radial-gradient(
-        circle,
-        rgba(94, 66, 166, 1) 0%,
-        rgba(68, 48, 115, 1) 100%
-      );
-      display: block;
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      -webkit-transform: translateX(-50%);
-      bottom: 0;
-      transition: width 0.2s ease;
-      -webkit-transition: width 0.2s ease;
-    }
-    &:hover {
-      &:after {
-        width: 80%;
-      }
-    }
   }
 }
