--- a/src/scss/stats.scss
+++ b/src/scss/stats.scss
@@ -1,17 +1,80 @@
-.stats {
-  text-transform: uppercase;
-  padding: $app-unit;
-  li {
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 2px solid $purple-light;
-    padding-bottom: $app-unit / 2;
-    margin-bottom: $app-unit / 2;
-    .stats-header {
-      font-weight: 700;
+.stats-graph-container {
+  position: relative;
+  margin-bottom: 2 * $app-unit;
+  .circle-chart {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    .circle-chart-background {
+      stroke: $main-font-color;
+      stroke-width: 1px;
+      fill: none;
     }
-    .stats-value {
-      font-size: 0.9em;
+    .circle-chart-circle {
+      animation: circle-chart-fill 1s reverse;
+      transform: rotate(-90deg);
+      transform-origin: center;
+      stroke: $green;
+      stroke-width: 2px;
+      fill: none;
     }
+  }
+  .stats {
+    text-transform: uppercase;
+    padding: $app-unit;
+    text-align: center;
+    font-size: $font-size-sm;
+    -webkit-animation: puff-in-center 0.2s cubic-bezier(0.47, 0, 0.745, 0.715)
+      both;
+    animation: puff-in-center 0.2s cubic-bezier(0.47, 0, 0.745, 0.715) both;
+    li {
+      margin-bottom: $app-unit / 10;
+      .stats-header {
+        font-weight: 700;
+      }
+      .stats-value {
+        font-size: 0.9em;
+      }
+    }
+  }
+}
+
+@keyframes circle-chart-fill {
+  to {
+    stroke-dasharray: 0 100;
+  }
+}
+
+@-webkit-keyframes puff-in-center {
+  0% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1, 2);
+    -webkit-filter: blur(4px);
+    filter: blur(4px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes puff-in-center {
+  0% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    -webkit-filter: blur(4px);
+    filter: blur(4px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
+    opacity: 1;
   }
 }
