--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -10,6 +10,9 @@ p {
 h1 {
   font-weight: 700;
   font-size: $font-size-lg;
+  margin-bottom: $app-unit;
+  border-bottom: 2px dashed $main-font-color;
+  padding-bottom: $app-unit / 2;
 }
 
 h2 {
@@ -22,4 +25,8 @@ h2 {
 
 .text-bold {
   font-weight: 700;
+}
+
+.text-center {
+  text-align: center;
 }
