--- a/src/scss/program.scss
+++ b/src/scss/program.scss
@@ -15,6 +15,13 @@
     margin: $app-unit / 2;
     overflow: hidden;
     border-radius: 5px;
+    @media screen and (max-width: 960px) {
+      width: calc(50% - #{$app-unit});
+    }
+    @media screen and (max-width: 470px) {
+      width: calc(50% - #{$app-unit / 2});
+      margin: $app-unit / 4;
+    }
     @include card-style($app-nav-bg);
     &.done {
       @include card-style($green);
@@ -45,6 +52,16 @@
         font-size: $font-size-md;
         color: $main-font-color;
         cursor: pointer;
+      }
+      @media screen and (max-width: 470px) {
+        flex-direction: column;
+        align-items: center;
+        div {
+          width: 100%;
+          &:not(:last-child) {
+            margin-bottom: $app-unit / 2;
+          }
+        }
       }
     }
   }
