--- a/src/scss/program.scss
+++ b/src/scss/program.scss
@@ -1,9 +1,23 @@
 @mixin card-style($color) {
-  .program-day-card-bottom {
-    background-color: $color;
+  .program-day-card-side {
+    .program-day-card-daily-graph {
+      background-color: darken($color, 3%);
+      .daily-graph-container {
+        background-color: darken($color, 12%);
+        .daily-graph-bar {
+          background-color: darken($color, 20%);
+        }
+      }
+    }
+    .program-day-card-side-reps {
+      background-color: darken($color, 6%);
+    }
+    .program-day-card-side-button {
+      background-color: darken($color, 9%);
+    }
   }
   .program-day-card-content {
-    background-color: darken($color, 5%);
+    background-color: $color;
   }
 }
 
@@ -11,15 +25,13 @@
   display: flex;
   flex-wrap: wrap;
   .program-day-card {
-    width: calc(25% - #{$app-unit});
-    margin: $app-unit / 2;
+    display: flex;
+    width: 100%;
     overflow: hidden;
     border-radius: 5px;
+    margin-bottom: $app-unit;
     @media screen and (max-width: 960px) {
-      width: calc(50% - #{$app-unit});
-    }
-    @media screen and (max-width: 470px) {
-      width: 100%;
+      display: block;
     }
     @include card-style($app-nav-bg);
     &.done {
@@ -32,28 +44,68 @@
       @include card-style($red);
     }
     .program-day-card-content {
-      min-height: 150px;
+      width: 50%;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      justify-content: space-between;
       text-align: center;
+      padding: $app-unit;
+      @media screen and (max-width: 960px) {
+        width: 100%;
+      }
+      .program-day-card-date {
+        font-weight: 400;
+        font-size: $font-size-sm;
+      }
     }
-    .program-day-card-bottom {
+    .program-day-card-side {
+      width: 50%;
       display: flex;
-      flex-direction: row;
-      padding: $app-unit / 2;
-      font-size: $font-size-sm;
+      flex-wrap: wrap;
+      @media screen and (max-width: 960px) {
+        width: 100%;
+      }
       div {
         text-align: center;
-        width: 50%;
+        flex-grow: 1;
+      }
+      .program-day-card-daily-graph,
+      .program-day-card-side-reps,
+      .program-day-card-side-button {
+        padding: $app-unit;
+        width: 33.333%;
+        @media screen and (max-width: 960px) {
+          padding: $app-unit / 2;
+        }
+      }
+      .program-day-card-daily-graph {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .daily-graph-container {
+          position: relative;
+          width: 100%;
+          height: 50px;
+          border-radius: 5px;
+          overflow: hidden;
+          @media screen and (max-width: 960px) {
+            height: 30px;
+          }
+          .daily-graph-bar {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 10%;
+          }
+        }
       }
       .program-day-card-button {
         width: 100%;
         height: 100%;
         background-color: transparent;
         border: none;
-        font-size: $font-size-md;
         color: $main-font-color;
+        text-align: center;
         cursor: pointer;
       }
     }
